@@ -1,5 +1,11 @@
 2007-10-31  Mark Rowe  <mrowe@apple.com>
 
+        Further Gtk build fixage.
+
+        * kjs/regexp_object.cpp:
+
+2007-10-31  Mark Rowe  <mrowe@apple.com>
+
         Gtk build fix.
 
         * kjs/regexp.h:
